--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".newproyect.Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +26,8 @@
         </activity>
         <activity android:name=".reproducir" />
         <activity android:name=".Main2Activity" />
-        <activity android:name=".Main"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".newproyect.VisualPlayer"></activity>
     </application>
 
 </manifest>
